--- a/lib/norte_web/templates/page/index.html.eex
+++ b/lib/norte_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <section class="phx-hero">
-  <h1><%= gettext "Bem vindo ao %{name}!", name: "Norte" %></h1>
-  <p>Uma bússola indicando se sua empresa está na direção certa.</p>
+  <h1><%= gettext "%{name} - Conformidade", name: "Norte" %></h1>
+  <p>Informações de resultado e desempenho.</p>
 </section>
 
