:construction: Verificando usuário e login

--- a/lib/norte_web/templates/email/forgot_password.html.eex
+++ b/lib/norte_web/templates/email/forgot_password.html.eex
@@ -16,6 +16,6 @@
     <li>Escolha a opção <b>Criar uma senha</b></li>
     <li>Informe seu código (<%= @user%>) e escolha <b>Criar senha</b></li>
     <li>Informe seu código de ativação (<%= @token%>), sua nova senha e confirme</li>
-    <li>Efetuar a conexão com see código e nova senha</li>
+    <li>Conecte-se com seu código e a nova senha</li>
   </ol>
 </p>
