--- a/lib/norte_web/templates/email/forgot_password.text.eex
+++ b/lib/norte_web/templates/email/forgot_password.text.eex
@@ -1,13 +1,13 @@
 Criar nova senha
 
-  Foi solicitada a criação de uma nova senha para o usuário <%= @user%> no cliente <%= @client%>.
+Foi solicitada a criação de uma nova senha para o usuário <%= @user%> no cliente <%= @client%>.
 
-  Código de ativação: <%= @token%>
+Código de ativação: <%= @token%>
 
-  Siga o procedimento:
+Siga o procedimento:
   
   - Acesse o sistema
   - Escolha a opção *Criar uma senha*
   - Informe seu código (<%= @user%>) e escolha *Criar senha*
   - Informe seu código de ativação (<%= @token%>), sua nova senha e confirme
-  - Efetuar a conexão com seu código e nova senha
+  - Conecte-se com seu código e a nova senha
